snapshots/phase-08/hubble/04-clusterwide-policy-hubble.txt
Jul 26 17:57:10.416: kube-system/coredns-589f44dc88-4p5kh:58894 (ID:14327) -> 10.10.10.20:6443 (host) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:10.899: 10.244.1.39:35836 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:57:11.314: 10.244.2.108:36958 (host) -> 10.244.2.36:4240 (health) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:57:11.314: 10.244.2.108:36958 (host) <- 10.244.2.36:4240 (health) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 17:57:12.806: kube-system/hubble-relay-599d47597b-8zpsw:36292 (ID:36220) -> 10.10.10.20:4244 (kube-apiserver) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:12.806: kube-system/hubble-relay-599d47597b-8zpsw:52964 (ID:36220) -> 10.10.10.22:4244 (host) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:12.806: kube-system/hubble-relay-599d47597b-8zpsw:52964 (ID:36220) <- 10.10.10.22:4244 (host) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:57:12.806: kube-system/hubble-relay-599d47597b-8zpsw:59296 (ID:36220) -> 10.10.10.21:4244 (remote-node) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:12.807: kube-system/hubble-relay-599d47597b-8zpsw:36292 (ID:36220) <- 10.10.10.20:4244 (kube-apiserver) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:57:12.807: kube-system/hubble-relay-599d47597b-8zpsw:59296 (ID:36220) <- 10.10.10.21:4244 (remote-node) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:57:14.386: kube-system/hubble-relay-599d47597b-8zpsw:43636 (ID:36220) <- 10.10.10.22:443 (host) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:57:10.417: kube-system/coredns-589f44dc88-4p5kh:58894 (ID:14327) <- 10.10.10.20:443 (host) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:10.899: 10.244.1.39:35836 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:57:14.386: kube-system/hubble-relay-599d47597b-8zpsw:43636 (ID:36220) -> 10.10.10.22:4244 (host) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 17:57:15.652: 10.244.0.206:55920 (host) <- 10.244.0.174:4240 (health) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 17:57:15.652: 10.244.0.206:55920 (host) -> 10.244.0.174:4240 (health) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:57:15.734: 10.244.0.206:46400 (host) -> kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:57:15.734: 10.244.0.206:46400 (host) <- kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:57:15.734: 10.244.0.206:46400 (host) -> kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:57:15.735: 10.244.0.206:46400 (host) -> kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:15.735: 10.244.0.206:46400 (host) <- kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:15.736: 10.244.0.206:46400 (host) -> kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:57:15.736: 10.244.0.206:46400 (host) -> kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:57:15.736: 10.244.0.206:46400 (host) <- kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:57:16.333: 10.244.2.108:40972 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:57:16.333: 10.244.2.108:40972 (host) <- kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:57:16.333: 10.244.2.108:40972 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:57:16.334: 10.244.2.108:40972 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:16.334: 10.244.2.108:40972 (host) <- kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:16.335: 10.244.2.108:40972 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:57:16.335: 10.244.2.108:40972 (host) <- kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:57:16.335: 10.244.2.108:40972 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:57:16.736: 10.244.1.39:49140 (host) -> 10.244.1.219:4240 (health) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:57:16.736: 10.244.1.39:49140 (host) <- 10.244.1.219:4240 (health) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 17:57:16.854: 10.244.0.206:53778 (host) -> kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:57:16.854: 10.244.0.206:53778 (host) <- kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:57:16.856: 10.244.0.206:53778 (host) -> kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:57:16.856: 10.244.0.206:53778 (host) -> kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:16.856: 10.244.0.206:53778 (host) <- kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:16.856: 10.244.0.206:53778 (host) -> kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:57:16.857: 10.244.0.206:53778 (host) <- kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:57:16.857: 10.244.0.206:53778 (host) -> kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:57:17.041: 10.244.2.108:40984 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:57:17.041: 10.244.2.108:40984 (host) <- kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:57:17.041: 10.244.2.108:40984 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:57:17.042: 10.244.2.108:40984 (host) <- kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:17.042: 10.244.2.108:40984 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:17.044: 10.244.2.108:40984 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:57:17.045: 10.244.2.108:40984 (host) <- kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:57:17.045: 10.244.2.108:40984 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:57:17.692: 10.244.0.206:36480 (remote-node) -> 10.244.1.219:4240 (health) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:57:17.699: 10.244.0.206:36480 (remote-node) <> 10.244.1.219:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 17:57:17.768: 10.244.0.206:36480 (remote-node) <> 10.244.1.219:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 17:57:17.971: 10.244.2.108:60008 (remote-node) <> 10.244.0.174:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 17:57:17.984: 10.244.2.108:60008 (remote-node) -> 10.244.0.174:4240 (health) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:57:18.012: kube-system/hubble-relay-599d47597b-8zpsw:52964 (ID:36220) -> 10.10.10.22:4244 (host) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 17:57:18.013: kube-system/hubble-relay-599d47597b-8zpsw:52964 (ID:36220) <- 10.10.10.22:4244 (host) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:18.013: kube-system/hubble-relay-599d47597b-8zpsw:36292 (ID:36220) -> 10.10.10.20:4244 (kube-apiserver) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 17:57:17.692: 10.244.0.206:36480 (remote-node) <- 10.244.1.219:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 17:57:17.984: 10.244.2.108:60008 (remote-node) <- 10.244.0.174:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 17:57:18.198: 10.244.2.108:60008 (remote-node) <> 10.244.0.174:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 17:57:19.690: kube-system/hubble-relay-599d47597b-8zpsw:36292 (ID:36220) <- 10.10.10.20:4244 (kube-apiserver) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:19.702: kube-system/coredns-589f44dc88-4p5kh:58894 (ID:14327) <- 10.10.10.20:443 (host) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:19.796: kube-system/hubble-relay-599d47597b-8zpsw:59296 (ID:36220) <- 10.10.10.21:4244 (remote-node) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:19.800: 10.244.1.39:57598 (host) -> kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:57:19.800: 10.244.1.39:57598 (host) <- kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:57:19.800: 10.244.1.39:57598 (host) -> kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:57:19.801: 10.244.1.39:57598 (host) -> kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:19.802: 10.244.1.39:57598 (host) <- kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:19.802: 10.244.1.39:57598 (host) -> kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:57:19.802: 10.244.1.39:57598 (host) <- kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:57:19.802: 10.244.1.39:57598 (host) -> kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:57:20.212: 10.244.1.39:37774 (host) -> kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:57:20.212: 10.244.1.39:37774 (host) <- kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:57:20.212: 10.244.1.39:37774 (host) -> kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:57:20.213: 10.244.1.39:37774 (host) -> kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:20.213: 10.244.1.39:37774 (host) <- kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:20.213: 10.244.1.39:37774 (host) <- kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:57:20.213: 10.244.1.39:37774 (host) -> kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:57:20.803: 10.244.1.39:46248 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:57:20.803: 10.244.1.39:46248 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:57:20.803: 10.244.1.39:46248 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:57:20.803: 10.244.1.39:46248 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:20.803: 10.244.1.39:46248 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:57:20.803: 10.244.1.39:46248 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:20.803: 10.244.1.39:46248 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:57:20.900: 10.244.1.39:46256 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:57:20.900: 10.244.1.39:46256 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:57:20.900: 10.244.1.39:46256 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:57:20.902: 10.244.1.39:46256 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:20.903: 10.244.1.39:46256 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:20.904: 10.244.1.39:46256 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:57:19.703: kube-system/coredns-589f44dc88-4p5kh:58894 (ID:14327) -> 10.10.10.20:6443 (host) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 17:57:19.796: kube-system/hubble-relay-599d47597b-8zpsw:59296 (ID:36220) -> 10.10.10.21:4244 (remote-node) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 17:57:20.904: 10.244.1.39:46256 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:57:24.342: kube-system/hubble-relay-599d47597b-8zpsw:36292 (ID:36220) -> 10.10.10.20:4244 (kube-apiserver) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 17:57:24.344: kube-system/hubble-relay-599d47597b-8zpsw:52964 (ID:36220) <- 10.10.10.22:4244 (host) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:24.344: kube-system/hubble-relay-599d47597b-8zpsw:52964 (ID:36220) -> 10.10.10.22:4244 (host) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 17:57:24.348: 10.244.1.39:48478 (remote-node) <> 10.244.0.174:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 17:57:24.355: 10.244.1.39:48478 (remote-node) <- 10.244.0.174:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 17:57:24.355: 10.244.1.39:48478 (remote-node) -> 10.244.0.174:4240 (health) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:57:25.138: 10.244.0.206:59524 (remote-node) <- 10.244.2.36:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 17:57:25.139: 10.244.0.206:59524 (remote-node) -> 10.244.2.36:4240 (health) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:57:25.139: kube-system/hubble-relay-599d47597b-8zpsw:36292 (ID:36220) <- 10.10.10.20:4244 (kube-apiserver) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:25.152: 10.244.0.206:59524 (remote-node) <> 10.244.2.36:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 17:57:25.423: kube-system/hubble-relay-599d47597b-8zpsw:59296 (ID:36220) <- 10.10.10.21:4244 (remote-node) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:25.423: kube-system/hubble-relay-599d47597b-8zpsw:59296 (ID:36220) -> 10.10.10.21:4244 (remote-node) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 17:57:25.428: 10.244.1.39 (remote-node) <> 10.244.0.174 (health) to-overlay FORWARDED (ICMPv4 EchoRequest)
Jul 26 17:57:25.428: 10.244.1.39:48478 (remote-node) <> 10.244.0.174:4240 (health) to-overlay FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:25.429: 10.244.1.39:48478 (remote-node) <> 10.244.0.174:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 17:57:25.436: 10.244.1.39 (remote-node) -> 10.244.0.174 (health) to-endpoint FORWARDED (ICMPv4 EchoRequest)
Jul 26 17:57:25.436: 10.244.1.39 (remote-node) <- 10.244.0.174 (health) to-overlay FORWARDED (ICMPv4 EchoReply)
Jul 26 17:57:25.735: 10.244.0.206:55672 (host) -> kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:57:25.735: 10.244.0.206:55672 (host) <- kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:57:25.735: 10.244.0.206:55672 (host) -> kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:57:25.735: 10.244.0.206:55672 (host) -> kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:25.735: 10.244.0.206:55672 (host) <- kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:25.735: 10.244.0.206:55672 (host) -> kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:57:25.735: 10.244.0.206:55672 (host) <- kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:57:25.735: 10.244.0.206:55672 (host) -> kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:57:26.148: 10.244.0.206:55920 (host) <- 10.244.0.174:4240 (health) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:26.148: 10.244.0.206 (host) -> 10.244.0.174 (health) to-endpoint FORWARDED (ICMPv4 EchoRequest)
Jul 26 17:57:26.148: 10.244.0.206 (host) <- 10.244.0.174 (health) to-stack FORWARDED (ICMPv4 EchoReply)
Jul 26 17:57:26.148: 10.244.0.206:55920 (host) -> 10.244.0.174:4240 (health) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:26.198: kube-system/coredns-589f44dc88-s9shj:45106 (ID:14327) -> 10.10.10.20:6443 (kube-apiserver) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:26.199: kube-system/coredns-589f44dc88-s9shj:45106 (ID:14327) <- 10.10.10.20:443 (kube-apiserver) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:26.334: 10.244.2.108:38334 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:57:26.334: 10.244.2.108:38334 (host) <- kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:57:26.334: 10.244.2.108:38334 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:57:26.336: 10.244.2.108:38334 (host) <- kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:26.336: 10.244.2.108:38334 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:26.338: 10.244.2.108:38334 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:57:26.339: 10.244.2.108:38334 (host) <- kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:57:26.339: 10.244.2.108:38334 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:57:26.533: 10.244.2.108 (host) -> 10.244.2.36 (health) to-endpoint FORWARDED (ICMPv4 EchoRequest)
Jul 26 17:57:26.533: 10.244.2.108 (host) <- 10.244.2.36 (health) to-stack FORWARDED (ICMPv4 EchoReply)
Jul 26 17:57:26.533: 10.244.2.108:36958 (host) -> 10.244.2.36:4240 (health) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:26.533: 10.244.2.108:36958 (host) <- 10.244.2.36:4240 (health) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:26.595: kube-system/coredns-589f44dc88-4p5kh:58894 (ID:14327) <- 10.10.10.20:443 (host) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:26.595: kube-system/coredns-589f44dc88-4p5kh:58894 (ID:14327) -> 10.10.10.20:6443 (host) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 17:57:26.853: 10.244.0.206:52900 (host) -> kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:57:26.853: 10.244.0.206:52900 (host) <- kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:57:26.853: 10.244.0.206:52900 (host) -> kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:57:26.854: 10.244.0.206:52900 (host) -> kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:26.855: 10.244.0.206:52900 (host) -> kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:57:26.855: 10.244.0.206:52900 (host) -> kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:57:26.855: 10.244.0.206:52900 (host) <- kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:26.855: 10.244.0.206:52900 (host) <- kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:57:27.041: 10.244.2.108:38336 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:57:27.041: 10.244.2.108:38336 (host) <- kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:57:27.041: 10.244.2.108:38336 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:57:27.041: 10.244.2.108:38336 (host) <- kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:27.042: 10.244.2.108:38336 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:27.043: 10.244.2.108:38336 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:57:27.043: 10.244.2.108:38336 (host) <- kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:57:27.043: 10.244.2.108:38336 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:57:28.556: 10.244.1.39:49140 (host) -> 10.244.1.219:4240 (health) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:28.556: 10.244.1.39:49140 (host) <- 10.244.1.219:4240 (health) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:29.746: kube-system/hubble-relay-599d47597b-8zpsw:43636 (ID:36220) <- 10.10.10.22:443 (host) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:57:29.801: 10.244.1.39:37022 (host) -> kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:57:29.802: 10.244.1.39:37022 (host) <- kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:57:29.802: 10.244.1.39:37022 (host) -> kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:57:29.802: 10.244.1.39:37022 (host) -> kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:29.802: 10.244.1.39:37022 (host) <- kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:29.803: 10.244.1.39:37022 (host) -> kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:57:29.803: 10.244.1.39:37022 (host) <- kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:57:29.803: 10.244.1.39:37022 (host) -> kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:57:30.211: 10.244.1.39:60090 (host) -> kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:57:30.211: 10.244.1.39:60090 (host) <- kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:57:30.211: 10.244.1.39:60090 (host) -> kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:57:30.211: 10.244.1.39:60090 (host) -> kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:30.212: 10.244.1.39:60090 (host) <- kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:30.212: 10.244.1.39:60090 (host) -> kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:57:30.212: 10.244.1.39:60090 (host) <- kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:57:30.212: 10.244.1.39:60090 (host) -> kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:57:30.804: 10.244.1.39:50446 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:57:30.804: 10.244.1.39:50446 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:57:30.804: 10.244.1.39:50446 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:57:30.804: 10.244.1.39:50446 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:30.805: 10.244.1.39:50446 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:30.805: 10.244.1.39:50446 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:57:30.806: 10.244.1.39:50446 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:57:30.806: 10.244.1.39:50446 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:57:29.746: kube-system/hubble-relay-599d47597b-8zpsw:43636 (ID:36220) -> 10.10.10.22:4244 (host) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 17:57:30.898: 10.244.1.39:50448 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:57:30.898: 10.244.1.39:50448 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:57:30.898: 10.244.1.39:50448 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:57:30.900: 10.244.1.39:50448 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:57:30.900: 10.244.1.39:50448 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:30.900: 10.244.1.39:50448 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:30.900: 10.244.1.39:50448 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:57:32.090: kube-system/hubble-relay-599d47597b-8zpsw:59296 (ID:36220) <- 10.10.10.21:4244 (remote-node) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:32.091: kube-system/hubble-relay-599d47597b-8zpsw:59296 (ID:36220) -> 10.10.10.21:4244 (remote-node) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 17:57:32.091: kube-system/hubble-relay-599d47597b-8zpsw:52964 (ID:36220) <- 10.10.10.22:4244 (host) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:32.091: kube-system/hubble-relay-599d47597b-8zpsw:52964 (ID:36220) -> 10.10.10.22:4244 (host) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 17:57:32.096: fe80::5ce3:ecff:fe4b:1d3a (ID:18398) <> ff02::2 (unknown) Unsupported L3 protocol DROPPED (ICMPv6 RouterSolicitation)
Jul 26 17:57:33.120: 10.244.0.206:36480 (remote-node) <- 10.244.1.219:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 17:57:33.120: 10.244.0.206:36480 (remote-node) -> 10.244.1.219:4240 (health) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:57:33.127: 10.244.0.206:36480 (remote-node) <> 10.244.1.219:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 17:57:33.558: 10.244.2.108:60008 (remote-node) <> 10.244.0.174:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 17:57:33.558: kube-system/hubble-relay-599d47597b-8zpsw:36292 (ID:36220) <- 10.10.10.20:4244 (kube-apiserver) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:33.571: 10.244.2.108:60008 (remote-node) <- 10.244.0.174:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 17:57:33.558: kube-system/hubble-relay-599d47597b-8zpsw:36292 (ID:36220) -> 10.10.10.20:4244 (kube-apiserver) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 17:57:33.571: 10.244.2.108:60008 (remote-node) -> 10.244.0.174:4240 (health) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:57:33.785: kube-system/coredns-589f44dc88-s9shj:45106 (ID:14327) <- 10.10.10.20:443 (kube-apiserver) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:33.785: kube-system/coredns-589f44dc88-s9shj:45106 (ID:14327) -> 10.10.10.20:6443 (kube-apiserver) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 17:57:35.185: ccnp-ops/ops-client-59bcd7f4c6-vqmzx:56195 (ID:6957) -> kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-overlay FORWARDED (UDP)
Jul 26 17:57:35.185: ccnp-ops/ops-client-59bcd7f4c6-vqmzx:52233 (ID:6957) -> kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-overlay FORWARDED (UDP)
Jul 26 17:57:35.185: ccnp-ops/ops-client-59bcd7f4c6-vqmzx:56195 (ID:6957) <- kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-endpoint FORWARDED (UDP)
Jul 26 17:57:35.186: ccnp-ops/ops-client-59bcd7f4c6-vqmzx:52233 (ID:6957) <- kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-endpoint FORWARDED (UDP)
Jul 26 17:57:35.186: ccnp-ops/ops-client-59bcd7f4c6-vqmzx:45937 (ID:6957) -> kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-overlay FORWARDED (UDP)
Jul 26 17:57:35.186: ccnp-ops/ops-client-59bcd7f4c6-vqmzx:52148 (ID:6957) -> kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-overlay FORWARDED (UDP)
Jul 26 17:57:35.186: ccnp-ops/ops-client-59bcd7f4c6-vqmzx:45937 (ID:6957) <- kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-endpoint FORWARDED (UDP)
Jul 26 17:57:35.187: ccnp-ops/ops-client-59bcd7f4c6-vqmzx:45234 (ID:6957) -> kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-overlay FORWARDED (UDP)
Jul 26 17:57:35.187: ccnp-ops/ops-client-59bcd7f4c6-vqmzx:52148 (ID:6957) <- kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-endpoint FORWARDED (UDP)
Jul 26 17:57:35.187: ccnp-ops/ops-client-59bcd7f4c6-vqmzx:33161 (ID:6957) -> kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-overlay FORWARDED (UDP)
Jul 26 17:57:35.187: ccnp-ops/ops-client-59bcd7f4c6-vqmzx:45234 (ID:6957) <- kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-endpoint FORWARDED (UDP)
Jul 26 17:57:35.188: ccnp-ops/ops-client-59bcd7f4c6-vqmzx:57823 (ID:6957) -> kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-overlay FORWARDED (UDP)
Jul 26 17:57:35.188: ccnp-ops/ops-client-59bcd7f4c6-vqmzx:33161 (ID:6957) <- kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-endpoint FORWARDED (UDP)
Jul 26 17:57:35.188: ccnp-ops/ops-client-59bcd7f4c6-vqmzx:41527 (ID:6957) -> kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-overlay FORWARDED (UDP)
Jul 26 17:57:35.189: ccnp-ops/ops-client-59bcd7f4c6-vqmzx:41527 (ID:6957) <- kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-endpoint FORWARDED (UDP)
Jul 26 17:57:35.189: ccnp-ops/ops-client-59bcd7f4c6-vqmzx:57823 (ID:6957) <- kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-endpoint FORWARDED (UDP)
Jul 26 17:57:35.190: ccnp-ops/ops-client-59bcd7f4c6-vqmzx:48216 (ID:6957) -> ccnp-team-a/backend-7dbf8fd45b-nc652:80 (ID:7939) policy-verdict:none TRAFFIC_DIRECTION_UNKNOWN ALLOWED (TCP Flags: SYN)
Jul 26 17:57:35.190: ccnp-ops/ops-client-59bcd7f4c6-vqmzx:48216 (ID:6957) -> ccnp-team-a/backend-7dbf8fd45b-nc652:80 (ID:7939) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:57:35.190: ccnp-ops/ops-client-59bcd7f4c6-vqmzx:48216 (ID:6957) <- ccnp-team-a/backend-7dbf8fd45b-nc652:80 (ID:7939) to-endpoint FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:57:35.190: ccnp-ops/ops-client-59bcd7f4c6-vqmzx:48216 (ID:6957) -> ccnp-team-a/backend-7dbf8fd45b-nc652:80 (ID:7939) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:57:35.190: ccnp-ops/ops-client-59bcd7f4c6-vqmzx:48216 (ID:6957) -> ccnp-team-a/backend-7dbf8fd45b-nc652:80 (ID:7939) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:35.191: ccnp-ops/ops-client-59bcd7f4c6-vqmzx:52233 (ID:6957) -> kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-endpoint FORWARDED (UDP)
Jul 26 17:57:35.191: ccnp-ops/ops-client-59bcd7f4c6-vqmzx:56195 (ID:6957) -> kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-endpoint FORWARDED (UDP)
Jul 26 17:57:35.191: ccnp-ops/ops-client-59bcd7f4c6-vqmzx:48216 (ID:6957) <- ccnp-team-a/backend-7dbf8fd45b-nc652:80 (ID:7939) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:35.191: ccnp-ops/ops-client-59bcd7f4c6-vqmzx:56195 (ID:6957) <- kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-overlay FORWARDED (UDP)
Jul 26 17:57:35.191: ccnp-ops/ops-client-59bcd7f4c6-vqmzx:52233 (ID:6957) <- kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-overlay FORWARDED (UDP)
Jul 26 17:57:35.192: ccnp-ops/ops-client-59bcd7f4c6-vqmzx:48216 (ID:6957) -> ccnp-team-a/backend-7dbf8fd45b-nc652:80 (ID:7939) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:57:35.192: ccnp-ops/ops-client-59bcd7f4c6-vqmzx:48216 (ID:6957) <- ccnp-team-a/backend-7dbf8fd45b-nc652:80 (ID:7939) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:57:35.192: ccnp-ops/ops-client-59bcd7f4c6-vqmzx:48216 (ID:6957) -> ccnp-team-a/backend-7dbf8fd45b-nc652:80 (ID:7939) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:57:35.193: ccnp-ops/ops-client-59bcd7f4c6-vqmzx:45234 (ID:6957) -> kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-endpoint FORWARDED (UDP)
Jul 26 17:57:35.193: ccnp-ops/ops-client-59bcd7f4c6-vqmzx:45234 (ID:6957) <- kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-overlay FORWARDED (UDP)
Jul 26 17:57:35.194: ccnp-ops/ops-client-59bcd7f4c6-vqmzx:41527 (ID:6957) -> kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-endpoint FORWARDED (UDP)
Jul 26 17:57:35.195: ccnp-ops/ops-client-59bcd7f4c6-vqmzx:41527 (ID:6957) <- kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-overlay FORWARDED (UDP)
Jul 26 17:57:35.199: ccnp-ops/ops-client-59bcd7f4c6-vqmzx:45937 (ID:6957) -> kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-endpoint FORWARDED (UDP)
Jul 26 17:57:35.199: ccnp-ops/ops-client-59bcd7f4c6-vqmzx:52148 (ID:6957) -> kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-endpoint FORWARDED (UDP)
Jul 26 17:57:35.199: ccnp-ops/ops-client-59bcd7f4c6-vqmzx:45937 (ID:6957) <- kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-overlay FORWARDED (UDP)
Jul 26 17:57:35.200: ccnp-ops/ops-client-59bcd7f4c6-vqmzx:52148 (ID:6957) <- kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-overlay FORWARDED (UDP)
Jul 26 17:57:35.201: ccnp-ops/ops-client-59bcd7f4c6-vqmzx:33161 (ID:6957) <- kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-overlay FORWARDED (UDP)
Jul 26 17:57:35.201: ccnp-ops/ops-client-59bcd7f4c6-vqmzx:33161 (ID:6957) -> kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-endpoint FORWARDED (UDP)
Jul 26 17:57:35.201: ccnp-ops/ops-client-59bcd7f4c6-vqmzx:57823 (ID:6957) -> kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-endpoint FORWARDED (UDP)
Jul 26 17:57:35.202: ccnp-ops/ops-client-59bcd7f4c6-vqmzx:57823 (ID:6957) <- kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-overlay FORWARDED (UDP)
Jul 26 17:57:35.314: ccnp-ops/ops-client-59bcd7f4c6-vqmzx:45150 (ID:6957) -> kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-overlay FORWARDED (UDP)
Jul 26 17:57:35.315: ccnp-ops/ops-client-59bcd7f4c6-vqmzx:59606 (ID:6957) -> kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-overlay FORWARDED (UDP)
Jul 26 17:57:35.315: ccnp-ops/ops-client-59bcd7f4c6-vqmzx:45150 (ID:6957) <- kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-endpoint FORWARDED (UDP)
Jul 26 17:57:35.316: ccnp-ops/ops-client-59bcd7f4c6-vqmzx:46118 (ID:6957) -> kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-overlay FORWARDED (UDP)
Jul 26 17:57:35.316: ccnp-ops/ops-client-59bcd7f4c6-vqmzx:59606 (ID:6957) <- kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-endpoint FORWARDED (UDP)
Jul 26 17:57:35.317: ccnp-ops/ops-client-59bcd7f4c6-vqmzx:48563 (ID:6957) -> kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-overlay FORWARDED (UDP)
Jul 26 17:57:35.317: ccnp-ops/ops-client-59bcd7f4c6-vqmzx:46118 (ID:6957) <- kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-endpoint FORWARDED (UDP)
Jul 26 17:57:35.317: ccnp-ops/ops-client-59bcd7f4c6-vqmzx:43082 (ID:6957) -> kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-overlay FORWARDED (UDP)
Jul 26 17:57:35.318: ccnp-ops/ops-client-59bcd7f4c6-vqmzx:48563 (ID:6957) <- kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-endpoint FORWARDED (UDP)
Jul 26 17:57:35.318: ccnp-ops/ops-client-59bcd7f4c6-vqmzx:43082 (ID:6957) <- kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-endpoint FORWARDED (UDP)
Jul 26 17:57:35.318: ccnp-ops/ops-client-59bcd7f4c6-vqmzx:35033 (ID:6957) -> kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-overlay FORWARDED (UDP)
Jul 26 17:57:35.319: ccnp-ops/ops-client-59bcd7f4c6-vqmzx:51911 (ID:6957) -> kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-overlay FORWARDED (UDP)
Jul 26 17:57:35.319: ccnp-ops/ops-client-59bcd7f4c6-vqmzx:35033 (ID:6957) <- kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-endpoint FORWARDED (UDP)
Jul 26 17:57:35.320: ccnp-ops/ops-client-59bcd7f4c6-vqmzx:51911 (ID:6957) <- kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-endpoint FORWARDED (UDP)
Jul 26 17:57:35.320: ccnp-ops/ops-client-59bcd7f4c6-vqmzx:55197 (ID:6957) -> kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-overlay FORWARDED (UDP)
Jul 26 17:57:35.321: ccnp-ops/ops-client-59bcd7f4c6-vqmzx:59606 (ID:6957) -> kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-endpoint FORWARDED (UDP)
Jul 26 17:57:35.321: ccnp-ops/ops-client-59bcd7f4c6-vqmzx:55197 (ID:6957) <- kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-endpoint FORWARDED (UDP)
Jul 26 17:57:35.322: ccnp-ops/ops-client-59bcd7f4c6-vqmzx:59606 (ID:6957) <- kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-overlay FORWARDED (UDP)
Jul 26 17:57:35.322: ccnp-ops/ops-client-59bcd7f4c6-vqmzx:35418 (ID:6957) -> ccnp-team-b/backend-7dbf8fd45b-f9jlf:80 (ID:18780) to-overlay FORWARDED (TCP Flags: SYN)
Jul 26 17:57:35.322: ccnp-ops/ops-client-59bcd7f4c6-vqmzx:46118 (ID:6957) -> kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-endpoint FORWARDED (UDP)
Jul 26 17:57:35.322: ccnp-ops/ops-client-59bcd7f4c6-vqmzx:46118 (ID:6957) <- kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-overlay FORWARDED (UDP)
Jul 26 17:57:35.322: ccnp-ops/ops-client-59bcd7f4c6-vqmzx:35418 (ID:6957) <- ccnp-team-b/backend-7dbf8fd45b-f9jlf:80 (ID:18780) to-endpoint FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:57:35.323: ccnp-ops/ops-client-59bcd7f4c6-vqmzx:35418 (ID:6957) -> ccnp-team-b/backend-7dbf8fd45b-f9jlf:80 (ID:18780) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 17:57:35.323: ccnp-ops/ops-client-59bcd7f4c6-vqmzx:35418 (ID:6957) -> ccnp-team-b/backend-7dbf8fd45b-f9jlf:80 (ID:18780) to-overlay FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:35.324: ccnp-ops/ops-client-59bcd7f4c6-vqmzx:35418 (ID:6957) <- ccnp-team-b/backend-7dbf8fd45b-f9jlf:80 (ID:18780) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:35.324: ccnp-ops/ops-client-59bcd7f4c6-vqmzx:35033 (ID:6957) -> kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-endpoint FORWARDED (UDP)
Jul 26 17:57:35.325: ccnp-ops/ops-client-59bcd7f4c6-vqmzx:35033 (ID:6957) <- kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-overlay FORWARDED (UDP)
Jul 26 17:57:35.325: ccnp-ops/ops-client-59bcd7f4c6-vqmzx:35418 (ID:6957) -> ccnp-team-b/backend-7dbf8fd45b-f9jlf:80 (ID:18780) to-overlay FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:57:35.326: ccnp-ops/ops-client-59bcd7f4c6-vqmzx:35418 (ID:6957) <- ccnp-team-b/backend-7dbf8fd45b-f9jlf:80 (ID:18780) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:57:35.328: ccnp-ops/ops-client-59bcd7f4c6-vqmzx:45150 (ID:6957) -> kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-endpoint FORWARDED (UDP)
Jul 26 17:57:35.328: ccnp-ops/ops-client-59bcd7f4c6-vqmzx:35418 (ID:6957) -> ccnp-team-b/backend-7dbf8fd45b-f9jlf:80 (ID:18780) policy-verdict:none TRAFFIC_DIRECTION_UNKNOWN ALLOWED (TCP Flags: SYN)
Jul 26 17:57:35.328: ccnp-ops/ops-client-59bcd7f4c6-vqmzx:35418 (ID:6957) -> ccnp-team-b/backend-7dbf8fd45b-f9jlf:80 (ID:18780) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:57:35.328: ccnp-ops/ops-client-59bcd7f4c6-vqmzx:35418 (ID:6957) <- ccnp-team-b/backend-7dbf8fd45b-f9jlf:80 (ID:18780) to-overlay FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:57:35.328: ccnp-ops/ops-client-59bcd7f4c6-vqmzx:45150 (ID:6957) <- kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-overlay FORWARDED (UDP)
Jul 26 17:57:35.329: ccnp-ops/ops-client-59bcd7f4c6-vqmzx:35418 (ID:6957) -> ccnp-team-b/backend-7dbf8fd45b-f9jlf:80 (ID:18780) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:57:35.329: ccnp-ops/ops-client-59bcd7f4c6-vqmzx:35418 (ID:6957) -> ccnp-team-b/backend-7dbf8fd45b-f9jlf:80 (ID:18780) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:35.330: ccnp-ops/ops-client-59bcd7f4c6-vqmzx:35418 (ID:6957) <- ccnp-team-b/backend-7dbf8fd45b-f9jlf:80 (ID:18780) to-overlay FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:35.331: ccnp-ops/ops-client-59bcd7f4c6-vqmzx:48563 (ID:6957) -> kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-endpoint FORWARDED (UDP)
Jul 26 17:57:35.331: ccnp-ops/ops-client-59bcd7f4c6-vqmzx:48563 (ID:6957) <- kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-overlay FORWARDED (UDP)
Jul 26 17:57:35.331: ccnp-ops/ops-client-59bcd7f4c6-vqmzx:43082 (ID:6957) -> kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-endpoint FORWARDED (UDP)
Jul 26 17:57:35.331: ccnp-ops/ops-client-59bcd7f4c6-vqmzx:43082 (ID:6957) <- kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-overlay FORWARDED (UDP)
Jul 26 17:57:35.331: ccnp-ops/ops-client-59bcd7f4c6-vqmzx:35418 (ID:6957) -> ccnp-team-b/backend-7dbf8fd45b-f9jlf:80 (ID:18780) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:57:35.331: ccnp-ops/ops-client-59bcd7f4c6-vqmzx:35418 (ID:6957) <- ccnp-team-b/backend-7dbf8fd45b-f9jlf:80 (ID:18780) to-overlay FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:57:35.332: ccnp-ops/ops-client-59bcd7f4c6-vqmzx:35418 (ID:6957) -> ccnp-team-b/backend-7dbf8fd45b-f9jlf:80 (ID:18780) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:57:35.332: ccnp-ops/ops-client-59bcd7f4c6-vqmzx:51911 (ID:6957) -> kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-endpoint FORWARDED (UDP)
Jul 26 17:57:35.333: ccnp-ops/ops-client-59bcd7f4c6-vqmzx:51911 (ID:6957) <- kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-overlay FORWARDED (UDP)
Jul 26 17:57:35.334: ccnp-ops/ops-client-59bcd7f4c6-vqmzx:55197 (ID:6957) -> kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-endpoint FORWARDED (UDP)
Jul 26 17:57:35.334: ccnp-ops/ops-client-59bcd7f4c6-vqmzx:55197 (ID:6957) <- kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-overlay FORWARDED (UDP)
Jul 26 17:57:35.460: ccnp-untrusted/untrusted-client-86b6c7d566-qdlnc:55385 (ID:18398) -> kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-overlay FORWARDED (UDP)
Jul 26 17:57:35.460: ccnp-untrusted/untrusted-client-86b6c7d566-qdlnc:43362 (ID:18398) -> kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-overlay FORWARDED (UDP)
Jul 26 17:57:35.462: ccnp-untrusted/untrusted-client-86b6c7d566-qdlnc:46191 (ID:18398) -> kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-endpoint FORWARDED (UDP)
Jul 26 17:57:35.462: ccnp-untrusted/untrusted-client-86b6c7d566-qdlnc:55385 (ID:18398) <- kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-endpoint FORWARDED (UDP)
Jul 26 17:57:35.462: ccnp-untrusted/untrusted-client-86b6c7d566-qdlnc:33294 (ID:18398) <> ccnp-team-a/backend-7dbf8fd45b-nc652:80 (ID:7939) policy-verdict:none TRAFFIC_DIRECTION_UNKNOWN DENIED (TCP Flags: SYN)
Jul 26 17:57:35.462: ccnp-untrusted/untrusted-client-86b6c7d566-qdlnc:33294 (ID:18398) <> ccnp-team-a/backend-7dbf8fd45b-nc652:80 (ID:7939) Policy denied DROPPED (TCP Flags: SYN)
Jul 26 17:57:35.462: ccnp-untrusted/untrusted-client-86b6c7d566-qdlnc:46191 (ID:18398) <- kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-endpoint FORWARDED (UDP)
Jul 26 17:57:35.462: ccnp-untrusted/untrusted-client-86b6c7d566-qdlnc:60596 (ID:18398) -> kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-overlay FORWARDED (UDP)
Jul 26 17:57:35.463: ccnp-untrusted/untrusted-client-86b6c7d566-qdlnc:60596 (ID:18398) <- kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-endpoint FORWARDED (UDP)
Jul 26 17:57:35.463: ccnp-untrusted/untrusted-client-86b6c7d566-qdlnc:43362 (ID:18398) <- kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-endpoint FORWARDED (UDP)
Jul 26 17:57:35.463: ccnp-untrusted/untrusted-client-86b6c7d566-qdlnc:48514 (ID:18398) -> kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-overlay FORWARDED (UDP)
Jul 26 17:57:35.464: ccnp-untrusted/untrusted-client-86b6c7d566-qdlnc:59364 (ID:18398) -> kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-overlay FORWARDED (UDP)
Jul 26 17:57:35.464: ccnp-untrusted/untrusted-client-86b6c7d566-qdlnc:48514 (ID:18398) <- kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-endpoint FORWARDED (UDP)
Jul 26 17:57:35.465: ccnp-untrusted/untrusted-client-86b6c7d566-qdlnc:59364 (ID:18398) <- kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-endpoint FORWARDED (UDP)
Jul 26 17:57:35.465: ccnp-untrusted/untrusted-client-86b6c7d566-qdlnc:53723 (ID:18398) -> kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-endpoint FORWARDED (UDP)
Jul 26 17:57:35.465: ccnp-untrusted/untrusted-client-86b6c7d566-qdlnc:53723 (ID:18398) <- kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-endpoint FORWARDED (UDP)
Jul 26 17:57:35.466: ccnp-untrusted/untrusted-client-86b6c7d566-qdlnc:39181 (ID:18398) -> kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-overlay FORWARDED (UDP)
Jul 26 17:57:35.467: ccnp-untrusted/untrusted-client-86b6c7d566-qdlnc:39181 (ID:18398) <- kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-endpoint FORWARDED (UDP)
Jul 26 17:57:35.468: ccnp-untrusted/untrusted-client-86b6c7d566-qdlnc:33294 (ID:18398) -> ccnp-team-a/backend-7dbf8fd45b-nc652:80 (ID:7939) to-overlay FORWARDED (TCP Flags: SYN)
Jul 26 17:57:35.468: ccnp-untrusted/untrusted-client-86b6c7d566-qdlnc:55385 (ID:18398) -> kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-endpoint FORWARDED (UDP)
Jul 26 17:57:35.468: ccnp-untrusted/untrusted-client-86b6c7d566-qdlnc:43362 (ID:18398) -> kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-endpoint FORWARDED (UDP)
Jul 26 17:57:35.470: ccnp-untrusted/untrusted-client-86b6c7d566-qdlnc:55385 (ID:18398) <- kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-overlay FORWARDED (UDP)
Jul 26 17:57:35.470: ccnp-untrusted/untrusted-client-86b6c7d566-qdlnc:60596 (ID:18398) -> kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-endpoint FORWARDED (UDP)
Jul 26 17:57:35.470: ccnp-untrusted/untrusted-client-86b6c7d566-qdlnc:60596 (ID:18398) <- kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-overlay FORWARDED (UDP)
Jul 26 17:57:35.470: ccnp-untrusted/untrusted-client-86b6c7d566-qdlnc:43362 (ID:18398) <- kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-overlay FORWARDED (UDP)
Jul 26 17:57:35.471: ccnp-untrusted/untrusted-client-86b6c7d566-qdlnc:48514 (ID:18398) -> kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-endpoint FORWARDED (UDP)
Jul 26 17:57:35.471: ccnp-untrusted/untrusted-client-86b6c7d566-qdlnc:48514 (ID:18398) <- kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-overlay FORWARDED (UDP)
Jul 26 17:57:35.471: ccnp-untrusted/untrusted-client-86b6c7d566-qdlnc:59364 (ID:18398) -> kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-endpoint FORWARDED (UDP)
Jul 26 17:57:35.472: ccnp-untrusted/untrusted-client-86b6c7d566-qdlnc:59364 (ID:18398) <- kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-overlay FORWARDED (UDP)
Jul 26 17:57:35.473: ccnp-untrusted/untrusted-client-86b6c7d566-qdlnc:39181 (ID:18398) -> kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-endpoint FORWARDED (UDP)
Jul 26 17:57:35.474: ccnp-untrusted/untrusted-client-86b6c7d566-qdlnc:39181 (ID:18398) <- kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-overlay FORWARDED (UDP)
Jul 26 17:57:35.736: 10.244.0.206:49486 (host) -> kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:57:35.736: 10.244.0.206:49486 (host) <- kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:57:35.736: 10.244.0.206:49486 (host) -> kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:57:35.738: 10.244.0.206:49486 (host) <- kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:35.738: 10.244.0.206:49486 (host) -> kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:57:35.738: 10.244.0.206:49486 (host) -> kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:35.738: 10.244.0.206:49486 (host) <- kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:57:35.738: 10.244.0.206:49486 (host) -> kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:57:36.332: 10.244.2.108:34320 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:57:36.332: 10.244.2.108:34320 (host) <- kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:57:36.332: 10.244.2.108:34320 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:57:36.333: 10.244.2.108:34320 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:36.334: 10.244.2.108:34320 (host) <- kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:36.335: 10.244.2.108:34320 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:57:36.336: 10.244.2.108:34320 (host) <- kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:57:36.336: 10.244.2.108:34320 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:57:36.507: ccnp-untrusted/untrusted-client-86b6c7d566-qdlnc:33294 (ID:18398) <> ccnp-team-a/backend-7dbf8fd45b-nc652:80 (ID:7939) policy-verdict:none TRAFFIC_DIRECTION_UNKNOWN DENIED (TCP Flags: SYN)
Jul 26 17:57:36.507: ccnp-untrusted/untrusted-client-86b6c7d566-qdlnc:33294 (ID:18398) <> ccnp-team-a/backend-7dbf8fd45b-nc652:80 (ID:7939) Policy denied DROPPED (TCP Flags: SYN)
Jul 26 17:57:36.853: 10.244.0.206:38962 (host) -> kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:57:36.853: 10.244.0.206:38962 (host) <- kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:57:36.853: 10.244.0.206:38962 (host) -> kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:57:36.854: 10.244.0.206:38962 (host) <- kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:36.854: 10.244.0.206:38962 (host) <- kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:57:36.854: 10.244.0.206:38962 (host) -> kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:57:36.854: 10.244.0.206:38962 (host) -> kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:37.041: 10.244.2.108:34332 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:57:37.041: 10.244.2.108:34332 (host) <- kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:57:37.041: 10.244.2.108:34332 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:57:37.042: 10.244.2.108:34332 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:37.042: 10.244.2.108:34332 (host) <- kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:37.042: 10.244.2.108:34332 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:57:37.042: 10.244.2.108:34332 (host) <- kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:57:37.042: 10.244.2.108:34332 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:57:37.531: ccnp-untrusted/untrusted-client-86b6c7d566-qdlnc:33294 (ID:18398) <> ccnp-team-a/backend-7dbf8fd45b-nc652:80 (ID:7939) policy-verdict:none TRAFFIC_DIRECTION_UNKNOWN DENIED (TCP Flags: SYN)
Jul 26 17:57:37.531: ccnp-untrusted/untrusted-client-86b6c7d566-qdlnc:33294 (ID:18398) <> ccnp-team-a/backend-7dbf8fd45b-nc652:80 (ID:7939) Policy denied DROPPED (TCP Flags: SYN)
Jul 26 17:57:38.300: 10.244.0.206:59524 (remote-node) -> 10.244.2.36:4240 (health) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:57:38.300: 10.244.0.206:59524 (remote-node) <- 10.244.2.36:4240 (health) to-overlay FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:57:38.300: kube-system/hubble-relay-599d47597b-8zpsw:52964 (ID:36220) <- 10.10.10.22:4244 (host) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:38.300: kube-system/hubble-relay-599d47597b-8zpsw:52964 (ID:36220) -> 10.10.10.22:4244 (host) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 17:57:38.300: 10.244.0.206:59524 (remote-node) -> 10.244.2.36:4240 (health) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:57:38.313: 10.244.0.206:59524 (remote-node) <> 10.244.2.36:4240 (health) to-overlay FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:57:38.313: 10.244.0.206:59524 (remote-node) <> 10.244.2.36:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 17:57:38.590: kube-system/hubble-relay-599d47597b-8zpsw:59296 (ID:36220) <- 10.10.10.21:4244 (remote-node) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:38.595: ccnp-untrusted/untrusted-client-86b6c7d566-qdlnc:53726 (ID:18398) -> kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-endpoint FORWARDED (UDP)
Jul 26 17:57:38.595: ccnp-untrusted/untrusted-client-86b6c7d566-qdlnc:53089 (ID:18398) -> kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-endpoint FORWARDED (UDP)
Jul 26 17:57:38.596: ccnp-untrusted/untrusted-client-86b6c7d566-qdlnc:52795 (ID:18398) -> kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-overlay FORWARDED (UDP)
Jul 26 17:57:38.596: ccnp-untrusted/untrusted-client-86b6c7d566-qdlnc:53726 (ID:18398) <- kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-endpoint FORWARDED (UDP)
Jul 26 17:57:38.596: ccnp-untrusted/untrusted-client-86b6c7d566-qdlnc:53089 (ID:18398) <- kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-endpoint FORWARDED (UDP)
Jul 26 17:57:38.596: ccnp-untrusted/untrusted-client-86b6c7d566-qdlnc:42288 (ID:18398) -> kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-endpoint FORWARDED (UDP)
Jul 26 17:57:38.596: ccnp-untrusted/untrusted-client-86b6c7d566-qdlnc:42288 (ID:18398) <- kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-endpoint FORWARDED (UDP)
Jul 26 17:57:38.597: ccnp-untrusted/untrusted-client-86b6c7d566-qdlnc:45988 (ID:18398) -> kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-endpoint FORWARDED (UDP)
Jul 26 17:57:38.597: ccnp-untrusted/untrusted-client-86b6c7d566-qdlnc:52795 (ID:18398) <- kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-endpoint FORWARDED (UDP)
Jul 26 17:57:38.597: ccnp-untrusted/untrusted-client-86b6c7d566-qdlnc:45988 (ID:18398) <- kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-endpoint FORWARDED (UDP)
Jul 26 17:57:38.598: ccnp-untrusted/untrusted-client-86b6c7d566-qdlnc:48496 (ID:18398) -> kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-endpoint FORWARDED (UDP)
Jul 26 17:57:38.590: kube-system/hubble-relay-599d47597b-8zpsw:59296 (ID:36220) -> 10.10.10.21:4244 (remote-node) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 17:57:38.600: ccnp-untrusted/untrusted-client-86b6c7d566-qdlnc:37650 (ID:18398) -> kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-overlay FORWARDED (UDP)
Jul 26 17:57:38.600: ccnp-untrusted/untrusted-client-86b6c7d566-qdlnc:48496 (ID:18398) <- kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-endpoint FORWARDED (UDP)
Jul 26 17:57:38.601: ccnp-untrusted/untrusted-client-86b6c7d566-qdlnc:37650 (ID:18398) <- kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-endpoint FORWARDED (UDP)
Jul 26 17:57:38.602: ccnp-untrusted/untrusted-client-86b6c7d566-qdlnc:42704 (ID:18398) -> kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-overlay FORWARDED (UDP)
Jul 26 17:57:38.604: ccnp-untrusted/untrusted-client-86b6c7d566-qdlnc:52795 (ID:18398) -> kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-endpoint FORWARDED (UDP)
Jul 26 17:57:38.604: ccnp-untrusted/untrusted-client-86b6c7d566-qdlnc:42704 (ID:18398) <- kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-endpoint FORWARDED (UDP)
Jul 26 17:57:38.604: ccnp-untrusted/untrusted-client-86b6c7d566-qdlnc:52795 (ID:18398) <- kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-overlay FORWARDED (UDP)
Jul 26 17:57:38.605: ccnp-untrusted/untrusted-client-86b6c7d566-qdlnc:60370 (ID:18398) <> ccnp-team-b/backend-7dbf8fd45b-f9jlf:80 (ID:18780) policy-verdict:none TRAFFIC_DIRECTION_UNKNOWN DENIED (TCP Flags: SYN)
Jul 26 17:57:38.605: ccnp-untrusted/untrusted-client-86b6c7d566-qdlnc:60370 (ID:18398) <> ccnp-team-b/backend-7dbf8fd45b-f9jlf:80 (ID:18780) Policy denied DROPPED (TCP Flags: SYN)
Jul 26 17:57:38.608: ccnp-untrusted/untrusted-client-86b6c7d566-qdlnc:37650 (ID:18398) -> kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-endpoint FORWARDED (UDP)
Jul 26 17:57:38.610: ccnp-untrusted/untrusted-client-86b6c7d566-qdlnc:37650 (ID:18398) <- kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-overlay FORWARDED (UDP)
Jul 26 17:57:38.610: ccnp-untrusted/untrusted-client-86b6c7d566-qdlnc:42704 (ID:18398) -> kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-endpoint FORWARDED (UDP)
Jul 26 17:57:38.611: ccnp-untrusted/untrusted-client-86b6c7d566-qdlnc:42704 (ID:18398) <- kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-overlay FORWARDED (UDP)
Jul 26 17:57:39.648: ccnp-untrusted/untrusted-client-86b6c7d566-qdlnc:60370 (ID:18398) <> ccnp-team-b/backend-7dbf8fd45b-f9jlf:80 (ID:18780) policy-verdict:none TRAFFIC_DIRECTION_UNKNOWN DENIED (TCP Flags: SYN)
Jul 26 17:57:39.648: ccnp-untrusted/untrusted-client-86b6c7d566-qdlnc:60370 (ID:18398) <> ccnp-team-b/backend-7dbf8fd45b-f9jlf:80 (ID:18780) Policy denied DROPPED (TCP Flags: SYN)
Jul 26 17:57:39.800: 10.244.1.39:40994 (host) -> kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:57:39.800: 10.244.1.39:40994 (host) <- kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:57:39.800: 10.244.1.39:40994 (host) -> kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:57:39.801: 10.244.1.39:40994 (host) -> kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:39.801: 10.244.1.39:40994 (host) <- kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:57:39.801: 10.244.1.39:40994 (host) <- kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:39.801: 10.244.1.39:40994 (host) -> kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:57:40.211: 10.244.1.39:44062 (host) -> kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:57:40.211: 10.244.1.39:44062 (host) <- kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:57:40.211: 10.244.1.39:44062 (host) -> kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:57:40.212: 10.244.1.39:44062 (host) -> kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:40.212: 10.244.1.39:44062 (host) <- kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:40.212: 10.244.1.39:44062 (host) -> kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:57:40.212: 10.244.1.39:44062 (host) <- kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:57:40.212: 10.244.1.39:44062 (host) -> kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:57:40.472: kube-system/hubble-relay-599d47597b-8zpsw:36292 (ID:36220) <- 10.10.10.20:4244 (kube-apiserver) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:40.472: kube-system/hubble-relay-599d47597b-8zpsw:36292 (ID:36220) -> 10.10.10.20:4244 (kube-apiserver) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 17:57:40.476: 10.244.1.39:48478 (remote-node) <> 10.244.0.174:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 17:57:40.484: 10.244.1.39:48478 (remote-node) <- 10.244.0.174:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 17:57:40.484: 10.244.1.39:48478 (remote-node) -> 10.244.0.174:4240 (health) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:57:40.529: kube-system/coredns-589f44dc88-4p5kh:58894 (ID:14327) <- 10.10.10.20:443 (host) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:40.672: ccnp-untrusted/untrusted-client-86b6c7d566-qdlnc:60370 (ID:18398) <> ccnp-team-b/backend-7dbf8fd45b-f9jlf:80 (ID:18780) policy-verdict:none TRAFFIC_DIRECTION_UNKNOWN DENIED (TCP Flags: SYN)
Jul 26 17:57:40.672: ccnp-untrusted/untrusted-client-86b6c7d566-qdlnc:60370 (ID:18398) <> ccnp-team-b/backend-7dbf8fd45b-f9jlf:80 (ID:18780) Policy denied DROPPED (TCP Flags: SYN)
Jul 26 17:57:40.804: 10.244.1.39:59612 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:57:40.804: 10.244.1.39:59612 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:57:40.804: 10.244.1.39:59612 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:57:40.804: 10.244.1.39:59612 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:40.804: 10.244.1.39:59612 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:40.804: 10.244.1.39:59612 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:57:40.805: 10.244.1.39:59612 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:57:40.898: 10.244.1.39:59626 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:57:40.898: 10.244.1.39:59626 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:57:40.898: 10.244.1.39:59626 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:57:40.899: 10.244.1.39:59626 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:40.899: 10.244.1.39:59626 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:40.899: 10.244.1.39:59626 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:57:40.899: 10.244.1.39:59626 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:57:40.899: 10.244.1.39:59626 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:57:40.982: 10.244.2.108:36958 (host) -> 10.244.2.36:4240 (health) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:40.982: 10.244.2.108:36958 (host) <- 10.244.2.36:4240 (health) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:40.529: kube-system/coredns-589f44dc88-4p5kh:58894 (ID:14327) -> 10.10.10.20:6443 (host) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 17:57:43.872: 10.244.1.39:49140 (host) <- 10.244.1.219:4240 (health) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 17:57:43.872: 10.244.1.39:49140 (host) -> 10.244.1.219:4240 (health) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:57:44.835: 10.244.0.206:55920 (host) <- 10.244.0.174:4240 (health) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 17:57:44.835: 10.244.0.206:55920 (host) -> 10.244.0.174:4240 (health) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:57:44.883: 10.244.1.39 (remote-node) -> 10.244.2.36 (health) to-endpoint FORWARDED (ICMPv4 EchoRequest)
Jul 26 17:57:44.883: 10.244.1.39 (remote-node) <- 10.244.2.36 (health) to-overlay FORWARDED (ICMPv4 EchoReply)
Jul 26 17:57:44.883: 10.244.1.39:50510 (remote-node) -> 10.244.2.36:4240 (health) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:57:44.883: 10.244.1.39:50510 (remote-node) <- 10.244.2.36:4240 (health) to-overlay FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:57:44.884: kube-system/hubble-relay-599d47597b-8zpsw:52964 (ID:36220) <- 10.10.10.22:4244 (host) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:44.884: kube-system/hubble-relay-599d47597b-8zpsw:52964 (ID:36220) -> 10.10.10.22:4244 (host) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 17:57:44.884: 10.244.1.39:50510 (remote-node) -> 10.244.2.36:4240 (health) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:57:44.884: kube-system/hubble-relay-599d47597b-8zpsw:59296 (ID:36220) <- 10.10.10.21:4244 (remote-node) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:44.884: kube-system/hubble-relay-599d47597b-8zpsw:59296 (ID:36220) -> 10.10.10.21:4244 (remote-node) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 17:57:44.884: 10.244.1.39:50510 (remote-node) -> 10.244.2.36:4240 (health) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:44.884: 10.244.1.39:50510 (remote-node) <- 10.244.2.36:4240 (health) to-overlay FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:44.889: 10.244.1.39 (remote-node) <> 10.244.2.36 (health) to-overlay FORWARDED (ICMPv4 EchoRequest)
Jul 26 17:57:44.889: 10.244.1.39:50510 (remote-node) <> 10.244.2.36:4240 (health) to-overlay FORWARDED (TCP Flags: SYN)
Jul 26 17:57:44.889: 10.244.1.39:50510 (remote-node) <> 10.244.2.36:4240 (health) to-overlay FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:44.889: 10.244.1.39:50510 (remote-node) <> 10.244.2.36:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 17:57:44.890: 10.244.1.39:50510 (remote-node) <> 10.244.2.36:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 17:57:45.106: kube-system/hubble-relay-599d47597b-8zpsw:43636 (ID:36220) <- 10.10.10.22:443 (host) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:57:45.107: kube-system/hubble-relay-599d47597b-8zpsw:43636 (ID:36220) -> 10.10.10.22:4244 (host) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 17:57:45.735: 10.244.0.206:33558 (host) -> kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:57:45.735: 10.244.0.206:33558 (host) <- kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:57:45.735: 10.244.0.206:33558 (host) -> kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:57:45.735: 10.244.0.206:33558 (host) -> kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:45.735: 10.244.0.206:33558 (host) <- kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:45.735: 10.244.0.206:33558 (host) -> kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:57:45.735: 10.244.0.206:33558 (host) <- kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:57:45.735: 10.244.0.206:33558 (host) -> kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:57:46.334: 10.244.2.108:44280 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:57:46.334: 10.244.2.108:44280 (host) <- kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:57:46.334: 10.244.2.108:44280 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:57:46.336: 10.244.2.108:44280 (host) <- kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:46.336: 10.244.2.108:44280 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:46.340: 10.244.2.108:44280 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:57:46.340: 10.244.2.108:44280 (host) <- kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:57:46.340: 10.244.2.108:44280 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:57:46.841: kube-system/hubble-relay-599d47597b-8zpsw:36292 (ID:36220) <- 10.10.10.20:4244 (kube-apiserver) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:46.841: kube-system/hubble-relay-599d47597b-8zpsw:36292 (ID:36220) -> 10.10.10.20:4244 (kube-apiserver) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 17:57:46.853: 10.244.0.206:39584 (host) -> kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:57:46.853: 10.244.0.206:39584 (host) <- kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:57:46.853: 10.244.0.206:39584 (host) -> kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:57:46.853: 10.244.0.206:39584 (host) -> kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:46.854: 10.244.0.206:39584 (host) <- kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:46.854: 10.244.0.206:39584 (host) -> kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:57:46.855: 10.244.0.206:39584 (host) <- kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:57:46.855: 10.244.0.206:39584 (host) -> kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:57:47.042: 10.244.2.108:44290 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:57:47.042: 10.244.2.108:44290 (host) <- kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:57:47.042: 10.244.2.108:44290 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:57:47.043: 10.244.2.108:44290 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:47.043: 10.244.2.108:44290 (host) <- kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:47.044: 10.244.2.108:44290 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:57:47.044: 10.244.2.108:44290 (host) <- kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:57:47.044: 10.244.2.108:44290 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:57:47.900: 10.244.0.206:36480 (remote-node) -> 10.244.1.219:4240 (health) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:57:47.900: 10.244.0.206:36480 (remote-node) <- 10.244.1.219:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 17:57:47.907: 10.244.0.206:36480 (remote-node) <> 10.244.1.219:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 17:57:48.179: 10.244.2.108:60008 (remote-node) <> 10.244.0.174:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 17:57:48.192: 10.244.2.108:60008 (remote-node) -> 10.244.0.174:4240 (health) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:57:48.192: 10.244.2.108:60008 (remote-node) <- 10.244.0.174:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 17:57:48.918: 10.244.2.108:60008 (remote-node) <> 10.244.0.174:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 17:57:49.800: 10.244.1.39:33772 (host) -> kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:57:49.801: 10.244.1.39:33772 (host) <- kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:57:49.801: 10.244.1.39:33772 (host) -> kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:57:49.801: 10.244.1.39:33772 (host) -> kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:49.802: 10.244.1.39:33772 (host) <- kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:49.802: 10.244.1.39:33772 (host) <- kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:57:49.802: 10.244.1.39:33772 (host) -> kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:57:50.207: kube-system/hubble-relay-599d47597b-8zpsw:59296 (ID:36220) <- 10.10.10.21:4244 (remote-node) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:50.207: kube-system/hubble-relay-599d47597b-8zpsw:59296 (ID:36220) -> 10.10.10.21:4244 (remote-node) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 17:57:50.209: kube-system/hubble-relay-599d47597b-8zpsw:52964 (ID:36220) <- 10.10.10.22:4244 (host) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:50.212: 10.244.1.39:56276 (host) -> kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:57:50.212: 10.244.1.39:56276 (host) <- kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:57:50.212: 10.244.1.39:56276 (host) -> kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:57:50.212: 10.244.1.39:56276 (host) -> kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:50.212: 10.244.1.39:56276 (host) <- kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:50.212: 10.244.1.39:56276 (host) -> kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:57:50.213: 10.244.1.39:56276 (host) <- kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:57:50.213: 10.244.1.39:56276 (host) -> kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:57:50.804: 10.244.1.39:56322 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:57:50.804: 10.244.1.39:56322 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:57:50.804: 10.244.1.39:56322 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:57:50.805: 10.244.1.39:56322 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:50.805: 10.244.1.39:56322 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:50.805: 10.244.1.39:56322 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:57:50.805: 10.244.1.39:56322 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:57:50.898: 10.244.1.39:56324 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:57:50.898: 10.244.1.39:56324 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:57:50.898: 10.244.1.39:56324 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:57:50.899: 10.244.1.39:56324 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:50.899: 10.244.1.39:56324 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:57:50.899: 10.244.1.39:56324 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:57:50.900: 10.244.1.39:56324 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: ACK, FIN)
